crates/agtrace-cli/tests/snapshots/agent_watch__presenter_codex_child_selected_with_feed_filter.snap
---
source: crates/agtrace-cli/tests/agent_watch.rs
assertion_line: 56
expression: vm
---
{
  "tree": [
    {
      "id": "codex:t-root",
      "depth": 0,
      "guides": [],
      "is_last_sibling": false,
      "label": "/root",
      "provider": "codex",
      "badge": null,
      "status": "idle",
      "ctx_pct": 12,
      "selected": false,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "codex:t-judge",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "judge",
      "provider": "codex",
      "badge": null,
      "status": "running",
      "ctx_pct": 77,
      "selected": true,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": true
    },
    {
      "id": "codex:t-judge-x",
      "depth": 2,
      "guides": [
        true
      ],
      "is_last_sibling": true,
      "label": "x",
      "provider": "codex",
      "badge": null,
      "status": "running",
      "ctx_pct": 5,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "codex:t-scout",
      "depth": 1,
      "guides": [],
      "is_last_sibling": true,
      "label": "scout",
      "provider": "codex",
      "badge": null,
      "status": "done",
      "ctx_pct": 15,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead",
      "depth": 0,
      "guides": [],
      "is_last_sibling": true,
      "label": "s-lead",
      "provider": "claude_code",
      "badge": null,
      "status": "running",
      "ctx_pct": 42,
      "selected": false,
      "collapsed": false,
      "has_children": true,
      "hidden_descendants": 0,
      "busy_tool": true
    },
    {
      "id": "claude:s-audit-a",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "audit-A",
      "provider": "claude_code",
      "badge": "T",
      "status": "idle",
      "ctx_pct": 12,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-audit-b",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "audit-B",
      "provider": "claude_code",
      "badge": "T",
      "status": "idle",
      "ctx_pct": 9,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead/a7ac2e91",
      "depth": 1,
      "guides": [],
      "is_last_sibling": false,
      "label": "explore call sites",
      "provider": "claude_code",
      "badge": "S",
      "status": "done",
      "ctx_pct": 15,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": false
    },
    {
      "id": "claude:s-lead/f0cc1a22",
      "depth": 1,
      "guides": [],
      "is_last_sibling": true,
      "label": "fork: bench",
      "provider": "claude_code",
      "badge": "F",
      "status": "running",
      "ctx_pct": 75,
      "selected": false,
      "collapsed": false,
      "has_children": false,
      "hidden_descendants": 0,
      "busy_tool": true
    }
  ],
  "focus": {
    "agent_id": "codex:t-judge",
    "title": "/root/judge",
    "provider": "codex",
    "kind": "thread",
    "team": null,
    "status": "running",
    "model": "gpt-5.6",
    "ctx": {
      "pct": 77,
      "used_tokens": 200000,
      "window_tokens": 258400,
      "provenance": "log"
    },
    "activity": {
      "type": "tool",
      "name": "exec",
      "summary": "cargo test -p agtrace-cli",
      "elapsed_secs": 240,
      "more": 0
    },
    "rows": [
      {
        "time": "12:00",
        "icon": "←",
        "kind": "message_in",
        "label": "/root",
        "text": "NEW_TASK [encrypted]"
      },
      {
        "time": "12:01",
        "icon": "▸",
        "kind": "tool",
        "label": "exec",
        "text": "cargo test -p agtrace-cli"
      },
      {
        "time": "12:01",
        "icon": "↳",
        "kind": "sub_action",
        "label": "",
        "text": "cargo test -p agtrace-cli  (exit 101)"
      },
      {
        "time": "12:01",
        "icon": "↳",
        "kind": "sub_action",
        "label": "",
        "text": "git diff --stat"
      },
      {
        "time": "12:01",
        "icon": "⇢",
        "kind": "spawn",
        "label": "spawn",
        "text": "x (thread)"
      },
      {
        "time": "12:02",
        "icon": "←",
        "kind": "message_in",
        "label": "/root",
        "text": "MESSAGE [encrypted]"
      }
    ],
    "follow": true
  },
  "feed": [
    {
      "time": "12:00",
      "kind": "spawn",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "spawn thread",
      "text": null,
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:00",
      "kind": "message",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "NEW_TASK",
      "text": null,
      "encrypted": true,
      "involves_selected": true
    },
    {
      "time": "12:01",
      "kind": "spawn",
      "from": "/root/judge",
      "to": [
        "/root/judge/x"
      ],
      "tag": "spawn thread",
      "text": null,
      "encrypted": false,
      "involves_selected": true
    },
    {
      "time": "12:02",
      "kind": "message",
      "from": "/root",
      "to": [
        "/root/judge"
      ],
      "tag": "MESSAGE",
      "text": null,
      "encrypted": true,
      "involves_selected": true
    }
  ],
  "status": {
    "scope": "project demo-project",
    "agents": 9,
    "running": 4,
    "idle": 3,
    "hidden": 0,
    "diagnostics": 0,
    "errors": 0,
    "last_error": null,
    "feed_filter": "selected",
    "hide_done": false,
    "auto_select": false
  },
  "focus_pane": "tree",
  "timeline_scroll": "follow",
  "feed_scroll": "follow",
  "show_help": false
}
