crates/agtrace-cli/tests/snapshots/agent_watch__render_120x40.snap
---
source: crates/agtrace-cli/tests/agent_watch.rs
assertion_line: 151
expression: "draw(&view, &mut ui(), 120, 40)"
---
"┌ Agents ──────────────────────────────┐┌ /root · gpt-5.6 · 12% of 258k [log] ─────────────────────────────────────────┐"
"│▶ codex /root              ○ idle  12%││now   turn completed 2m39s ago                                                │"
"│  ├ judge                  ● busy  77%││12:00 › user        triage the flaky tests                                    │"
"│  │ └ x                    ● busy   5%││12:00 ◆ model       gpt-5.6                                                   │"
"│  └ scout                  ✓ done  15%││12:00 ⇢ spawn       judge (thread)                                            │"
"│  s-lead                   ● busy  42%││12:00 → /root/judge NEW_TASK [encrypted]                                      │"
"│  ├ T audit-A              ○ idle  12%││12:00 ⇢ spawn       scout (thread)                                            │"
"│  ├ T audit-B              ○ idle   9%││12:00 → /root/scout NEW_TASK [encrypted]                                      │"
"│  ├ S explore call sites   ✓ done  15%││12:02 ← /root/scout FINAL_ANSWER "3 flaky tests, all in watch_command.rs"     │"
"│  └ F fork: bench          ● busy  75%││12:02 ◇ /root/scout done                                                      │"
"│                                      ││12:02 ⟲ compact     240k→? (auto)                                             │"
"│                                      ││12:02 → /root/judge MESSAGE [encrypted]                                       │"
"│                                      ││12:02 ─ turn end                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│12:01 audit-A → s-lead            MESSAGE      "done, found 3 bugs"                                                   │"
"│12:01 /root/judge → /root/judge/x spawn thread                                                                        │"
"│12:01 audit-B                     idle                                                                                │"
"│12:02 /root/scout → /root         FINAL_ANSWER "3 flaky tests, all in watch_command.rs"                               │"
"│12:02 /root/scout                 done                                                                                │"
"│12:02 /root → /root/judge         MESSAGE      [encrypted]                                                            │"
"│12:02 explore call sites          done                                                                                │"
"│12:02 explore call sites → s-lead TASK_NOTIFY  "found 2 call sites"                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" scope: project demo-project · 9 agents (4 running, 3 idle) · ?:help q:quit                                             "
