crates/agtrace-cli/tests/snapshots/agent_watch__render_120x40_codex_child_focused_timeline.snap
---
source: crates/agtrace-cli/tests/agent_watch.rs
assertion_line: 160
expression: "draw(&view, &mut ui, 120, 40)"
---
"┌ Agents ──────────────────────────────┐┌ /root/judge · gpt-5.6 · 77% of 258k [log] ───────────────────────────────────┐"
"│  codex /root              ○ idle  12%││now   ▸ exec cargo test -p agtrace-cli  (4m00s)                               │"
"│▶ ├ judge                  ● busy  77%││12:00 ← /root NEW_TASK [encrypted]                                            │"
"│  │ └ x                    ● busy   5%││12:01 ▸ exec  cargo test -p agtrace-cli                                       │"
"│  └ scout                  ✓ done  15%││12:01 ↳       cargo test -p agtrace-cli  (exit 101)                           │"
"│  s-lead                   ● busy  42%││12:01 ↳       git diff --stat                                                 │"
"│  ├ T audit-A              ○ idle  12%││12:01 ⇢ spawn x (thread)                                                      │"
"│  ├ T audit-B              ○ idle   9%││12:02 ← /root MESSAGE [encrypted]                                             │"
"│  ├ S explore call sites   ✓ done  15%││                                                                              │"
"│  └ F fork: bench          ● busy  75%││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"│                                      ││                                                                              │"
"└──────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Messages ────────────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│12:01 audit-A → s-lead            MESSAGE      "done, found 3 bugs"                                                   │"
"│12:01 /root/judge → /root/judge/x spawn thread                                                                        │"
"│12:01 audit-B                     idle                                                                                │"
"│12:02 /root/scout → /root         FINAL_ANSWER "3 flaky tests, all in watch_command.rs"                               │"
"│12:02 /root/scout                 done                                                                                │"
"│12:02 /root → /root/judge         MESSAGE      [encrypted]                                                            │"
"│12:02 explore call sites          done                                                                                │"
"│12:02 explore call sites → s-lead TASK_NOTIFY  "found 2 call sites"                                                   │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" scope: project demo-project · 9 agents (4 running, 3 idle) · ?:help q:quit                                             "
