crates/agtrace-cli/tests/snapshots/agent_watch__render_empty_workspace.snap
---
source: crates/agtrace-cli/tests/agent_watch.rs
assertion_line: 174
expression: "draw(&view, &mut ui(), 80, 24)"
---
"┌ Agents ──────────────────┐┌ waiting for agents… ─────────────────────────────┐"
"│ no agents yet            ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"│                          ││                                                  │"
"└──────────────────────────┘└──────────────────────────────────────────────────┘"
"┌ Messages ────────────────────────────────────────────────────────────────────┐"
"│ no inter-agent messages yet                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" scope: project demo-project · 0 agents (0 running, 0 idle) · ?:help q:quit     "
